<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rapa.iot.android.skidbike.view.SpeedActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/weatherImg"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/sun" />

        <TextView
            android:id="@+id/weatherTv"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/recordBut"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="25dp"
            android:background="@drawable/btnback"
            android:text="@string/record_Mode_But_Start" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/speedFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_weight="7"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/maxSpeedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxSpeed" />

            <TextView
                android:id="@+id/maxSpeedMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--.--Km/h" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/avgSpeedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avgSpeed" />

            <TextView
                android:id="@+id/avgSpeedMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--.--Km/h" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/odometerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/odometer" />

            <TextView
                android:id="@+id/odoMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="--.---Km" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/recodedTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recodedTime" />

            <TextView
                android:id="@+id/recodedTimeMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HH:MM:SS" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/currentTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentTime" />

            <TextView
                android:id="@+id/currentTimeMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HH:MM:SS" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>