<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rapa.iot.android.skidbike.view.LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:text="@string/app_name"
        android:textSize="40sp" 
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/idEt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:paddingLeft="60dp"
        android:background="@drawable/idedit_img"
        android:inputType="textEmailAddress"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pwdEt"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="60dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/pwdedit_img"
        android:ems="10" />

    <CheckBox
        android:id="@+id/autoLoginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:layout_marginTop="10dp"
        android:text="@string/checkBoxTitle" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/loginbtn" />

    <Button
        android:id="@+id/registBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#FFFFFFFF"
        android:textStyle="italic"
        android:text="@string/registBtn" />

</LinearLayout>
